Task5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Разрешаем вход на back-end-api от front-end
    - from:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80
    # Разрешаем вход на admin-back-end-api от admin-front-end
    - from:
        - podSelector:
            matchLabels:
              role: admin-front-end
      ports:
        - protocol: TCP
          port: 80
  egress:
    # back-end-api может инициировать соединение к front-end (двусторонняя связь)
    - to:
        - podSelector:
            matchLabels:
              role: front-end
      ports:
        - protocol: TCP
          port: 80
    # admin-back-end-api может инициировать соединение к admin-front-end
    - to:
        - podSelector:
            matchLabels:
              role: admin-front-end
      ports:
        - protocol: TCP
          port: 80
